# Projektkurs-Minio-Test

./: .gitignore  Cargo.toml  README.md  VideoJSTest.html  ffmpeg
media/Cinderella/output/: Cinderella.m3u8  Cinderella0.ts  Cinderella1.ts  Cinderella10.ts  Cinderella11.ts  Cinderella12.ts  Cinderella13.ts  Cinderella14.ts  Cinderella15.ts  Cinderella2.ts  Cinderella3.ts  Cinderella4.ts  Cinderella5.ts  Cinderella6.ts  Cinderella7.ts  Cinderella8.ts  Cinderella9.ts
media/output/: Deco.m3u8  Deco0.ts  Deco1.ts  Deco10.ts  Deco11.ts  Deco12.ts  Deco13.ts  Deco16.ts  Deco17.ts  Deco18.ts  Deco19.ts  Deco4.ts  Deco5.ts  Deco6.ts  Deco8.ts  DeutschCharaktere.jpeg.m3u8  DeutschCharaktere.m3u8  DeutschCharaktere0.ts  Marienschule.mp4.m3u8  Marienschule.mp44.ts  Marienschule.mp45.ts
src/: main.rs
