[package]
name = "minio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.28.0"
rocket = "0.5.0-rc.1"
tokio = "1.14.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
